Fix modal and dropdown colors in dark mode
and get rid of the hacky `styleModal` function

--- a/public/css/mango.css
+++ b/public/css/mango.css
@@ -101,3 +101,23 @@ td>.uk-dropdown {
 .grayscale {
     filter: grayscale(100%);
 }
+
+.uk-light .uk-navbar-dropdown,
+.uk-light .uk-modal-header,
+.uk-light .uk-modal-body,
+.uk-light .uk-modal-footer {
+    background: #222;
+}
+
+.uk-light .uk-dropdown {
+    background: #333;
+}
+
+.uk-light .uk-navbar-dropdown,
+.uk-light .uk-dropdown {
+    color: #ccc;
+}
+
+.uk-light .uk-nav-header {
+    color: #555;
+}
